fix home and login

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1336,6 +1336,7 @@ footer
 .form-section
   background transparent
   padding-bottom  100px
+  padding-top 40px
   .title, .text-form
     color #3a2103
 .contact-section
