--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -65,7 +65,7 @@
             <div class="col-md-7">
                 <div class="reg-content">
                     <h2 class="reg-descrip">Acude a nuestros cursos, talleres y asesorías
-                        para la utilización del produto que adquiriste con
+                        para la utilización del producto que adquiriste con
                         nosotros. Para nosotros es importante atender todas tus necesidades.</h2>
 
                     <h4 class="reg-q">¿Cómo registrarme y acudir a los cursos?</h4>
