--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,7 +1,7 @@
 <div class="header-title">
     <h2 class="title text-center">{{ Post.detail.title }}</h2>
 </div>
-<div id="breadcrumb">
+<!--<div id="breadcrumb">
     <div class="container">
         <ol class="breadcrumb">
             <li><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
@@ -11,7 +11,7 @@
             <li class="active">{{ Post.detail.title }}</li>
         </ol>
     </div>
-</div>
+</div>-->
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
