create product detail

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -624,6 +624,21 @@ header {
   text-align: center;
   text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
+.product-detail .prod-detail-descrip p {
+  font-size: 18px;
+  padding-top: 20px;
+  color: #717171;
+}
+.product-info {
+  background: #f5bb06;
+  height: 105px;
+}
+.product-info .info-descrip {
+  padding: 10px 6% 0;
+}
+.product-info .info-descrip a {
+  color: #333;
+}
 #product-detail {
   margin: 100px 0;
 }
@@ -1583,6 +1598,12 @@ footer .contact-sty .download-app > i:hover {
 .form-item {
   padding-top: 20px;
 }
+.cart-qty {
+  width: 90px !important;
+  height: auto !important;
+  border: 1px solid #aaa !important;
+  font-size: 18px;
+}
 .form-control {
   margin-bottom: 15px;
   display: block;
@@ -1594,7 +1615,7 @@ footer .contact-sty .download-app > i:hover {
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #eaeaea !important;
+  border: 1px solid #eaeaea;
   border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
