--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -535,7 +535,19 @@ header
       text-align center
       text-shadow 0 0 10px rgba(0,0,0,0.5)
 
-
+.product-detail
+  .prod-detail-descrip
+    p
+      font-size 18px
+      padding-top 20px
+      color catext3
+.product-info
+  background rgb(245, 187, 6)
+  height 105px
+  .info-descrip
+    padding 10px 6% 0
+    a
+      color #333
 #product-detail
   margin 100px 0
   .title-detail
@@ -1344,6 +1356,11 @@ footer
   margin-top 100px
 .form-item
   padding-top 20px
+.cart-qty
+  width 90px !important
+  height auto !important
+  border 1px solid #aaa !important
+  font-size 18px
 .form-control
   margin-bottom 15px
   display block
@@ -1355,7 +1372,7 @@ footer
   color #555
   background-color #fff
   background-image none
-  border 1px solid #eaeaea !important
+  border 1px solid #eaeaea
   border-radius 0px
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
