--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -9,7 +9,7 @@
         </ol>
     </div>
 </div>
-<section id="content-area" class="content-blog">
+<section id="content-area" class="content-blog product-detail">
     <h1 class="text-center">{{Product.detail.title}}</h1>
     <div class="row text-center">
         <div class="col-md-6 col-md-offset-3">
@@ -19,23 +19,27 @@
                 <h3>$222.00</h3>
             </div>
             <div class="col-md-4">
-                <input type="number">
+                <input type="number" class="form-control cart-qty" min="0">
             </div>
         </div>
     </div>
     <div class="row text-center">
         <button href="" class="btn btn-success btn-cart">Agregar a carrito</button>
+
+        <h4 class="prod-detail-descrip" ng-bind-html="Product.detail.content | trustHtml">
+            {{Product.detail.content}}</h4>
     </div>
 </section>
-<section style="background: yellow; height: 130px;">
+<section class="product-info">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h3>¿?Tienes dudas acerca de este producto</h3>
+                <h1 class="info-descrip">¿Tienes dudas acerca de este producto?</h1>
             </div>
             <div class="col-md-6">
-                <h3>¡Llámanos!</h3>
-                <a href=""><i class="fa fa-phone"></i> 333 333 33 33</a>
+                <h1 class="info-descrip">¡Llámanos!<br>
+                <a href=""><i class="ion-ios-telephone-outline"></i> 333 333 33 33</a>
+                </h1>
             </div>
         </div>
     </div>
