--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -68,7 +68,7 @@
                         para la utilización del producto que adquiriste con
                         nosotros. Para nosotros es importante atender todas tus necesidades.</h2>
 
-                    <h4 class="reg-q">¿Cómo registrarme y acudir a los cursos?</h4>
+                    <h4 class="reg-q"><a href="">¿Cómo registrarme y acudir a los cursos?</a></h4>
                     <button class="btn btn-success btn-lg btn-reg">Más información</button>
                 </div>
 
