--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -495,6 +495,8 @@ header
     .reg-q
       color cagreen
       margin 1.5em 0
+      a
+        color cagreen
 #contact
   background #e9e8e7
   text-align center
