--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -16,7 +16,7 @@
                                 <h3 class="prod-descrip">{{entry.title}}</h3>
                                 <h4 class="prod-price"><strong>{{entry.excerpt}}</strong></h4>
                                 </a>
-                                <button class="btn btn-success btn-cart">Agregar al carrito</button>
+                                <a ui-sref="shopcart" class="btn btn-success btn-cart">Agregar al carrito</a>
                             </div>
                         </div>
                     </div>
