ajuste de estilo

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -66,7 +66,7 @@ body {
   color: #fff !important;
 }
 .content {
-  margin-top: 0;
+  margin-top: 100px;
 }
 .content-post {
   margin: 20px 0;
@@ -124,6 +124,11 @@ body {
     content: '1 .column.size-1-1';
   }
 }
+.dropdown-menu {
+  width: 100vw;
+  min-width: 90vw;
+  top: 100px;
+}
 .log-section-mobile {
   display: none;
 }
@@ -139,7 +144,7 @@ body {
   padding: 33px 15px;
 }
 .header.smaller .navbar-default .navbar-nav > li > a:hover {
-  color: #439e7b;
+  color: #aa261d;
 }
 .header.smaller .navbar-default .logo-white {
   display: inline;
@@ -162,9 +167,26 @@ body {
 .navbar-info .shopping-cart i {
   font-size: 30px;
 }
+.shopping-cart a > i {
+  font-size: 32px !important;
+}
+​,
+.shopping-cart a {
+  font-size: 28px !important;
+}
+.qty-cart {
+  position: absolute;
+  color: #fff;
+  text-align: center;
+  border-radius: 30px;
+  background-color: #aa261d;
+  top: 0px;
+  right: 95px;
+  width: 20px;
+  height: 20px;
+}
 header {
   width: 100%;
-  height: 100px;
   overflow: hidden;
   top: 0;
   left: 0;
@@ -181,7 +203,7 @@ header {
 }
 .header .navbar-default {
   position: absolute;
-  background-color: #323232;
+  background-color: #fff;
   left: 0;
   right: 0;
   height: 100px;
@@ -189,12 +211,14 @@ header {
   border-radius: 0;
   margin-bottom: 0;
   z-index: 9999;
+  box-shadow: 0 7px 10px rgba(0,0,0,0.3);
+  border-top: 1px solid #eee;
 }
 .header .navbar-default .navbar-brand {
   padding: 5px 15px;
 }
 .header .navbar-default .navbar-nav > li > a {
-  color: #fff;
+  color: #565656;
   padding: 37px 15px;
   font-size: 18px;
   font-family: 'Roboto Slab', sans-serif;
@@ -206,7 +230,7 @@ header {
 .header .navbar-default .navbar-nav > li > a:hover,
 .header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #439e7b;
+  color: #aa261d;
 }
 .header .navbar-default .container-fluid {
   display: table;
@@ -226,13 +250,13 @@ header {
 }
 .header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
   background-color: transparent;
-  color: #f2dec7;
+  color: #aa261d;
 }
 .header .navbar-default .navbar-nav .dropdown .dropdown-menu {
   width: 100%;
   background-color: #fff;
   border: none;
-  border-top: 2px solid #389c80 !important;
+  border-top: 2px solid #aa261d !important;
   -webkit-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
   -moz-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
   box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
@@ -244,8 +268,8 @@ header {
   padding: 10px 15px;
 }
 .header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
-  background: rgba(56,156,128,0.4);
-  color: #fff;
+  background: transparent;
+  color: #aa261d;
 }
 .header .logo {
   width: 180px;
@@ -373,7 +397,6 @@ header {
 }
 .carousel-inner {
   background-color: transparent;
-  margin-top: 32px;
 }
 .carousel-control {
   display: none;
@@ -440,13 +463,13 @@ header {
   margin-top: 0;
 }
 .header-title {
-  background: #439e7b;
-  height: 145px;
+  background: #aa261d;
+  height: 80px;
 }
 .header-title .title {
   color: #fff;
   font-size: 2.5em;
-  padding: 90px 0;
+  padding: 20px 0;
 }
 #content-area {
   margin: 0;
@@ -501,7 +524,7 @@ header {
   background-repeat: no-repeat !important;
 }
 .services {
-  background: #439e7b;
+  background: #aa261d;
 }
 .services .box-service {
   padding: 0 50px;
@@ -570,11 +593,11 @@ header {
   font-family: Roboto;
 }
 .register .reg-content .reg-q {
-  color: #439e7b;
+  color: #aa261d;
   margin: 1.5em 0;
 }
 .register .reg-content .reg-q a {
-  color: #439e7b;
+  color: #aa261d;
 }
 #contact {
   background: #e9e8e7;
@@ -853,6 +876,8 @@ color
 .box-widget .widget-title {
   padding-left: 10px;
   font-weight: bold;
+  padding: 20px 10px;
+  margin: 0;
 }
 .box-widget .box-widget-header {
   padding: 10px;
@@ -872,7 +897,7 @@ color
 }
 .box-widget .box-widget-container h3>a:hover,
 .box-widget .box-widget-container h2>a:hover {
-  color: #439e7b;
+  color: #aa261d;
 }
 .box-widget .box-widget-container h2 {
   font-size: 18px;
@@ -910,7 +935,7 @@ color
   font-size: 17px;
 }
 .list-sidebar li > a:hover {
-  color: #439e7b;
+  color: #aa261d;
 }
 .list-sidebar li > a p {
   font-weight: 500;
@@ -1172,7 +1197,7 @@ color
 }
 .forgot-pass a:hover,
 .forgot-pass a:focus {
-  color: #439e7b;
+  color: #aa261d;
 }
 .form-horizontal label {
   color: #746857;
@@ -1257,7 +1282,7 @@ footer .contact-sty .list a {
   color: #ccc;
 }
 footer .contact-sty .list a:hover {
-  color: #439e7b;
+  color: #aa261d;
   transition: all 0.25s ease-in-out;
 }
 footer .contact-sty .download-app > i {
@@ -1270,7 +1295,7 @@ footer .contact-sty .download-app > i:hover {
 .btn-login-ca {
   padding: 10px 0;
   border-radius: 0 !important;
-  background: #439e7b;
+  background: #aa261d;
   font-family: "Roboto Slab";
   font-weight: 600 !important;
   color: #fff;
@@ -1278,29 +1303,29 @@ footer .contact-sty .download-app > i:hover {
 }
 .btn-login-ca.btn-login-ca:hover,
 .btn-cart.btn-login-ca:focus {
-  background: #174f36 !important;
+  background: #7e1a1d !important;
   color: #fff;
 }
 .btn-cart {
   border-radius: 0 !important;
-  border-color: #439e7b;
-  background: #439e7b;
+  border-color: #aa261d;
+  background: #aa261d;
 }
 .btn-cart.btn-cart:hover,
 .btn-cart.btn-cart:focus {
-  background: #174f36 !important;
+  background: #7e1a1d !important;
 }
 .btn-reg {
   background: #fff;
-  color: #439e7b;
-  border: 2px solid #439e7b;
+  color: #aa261d;
+  border: 2px solid #aa261d;
   border-radius: 0;
 }
 .btn-reg.btn-reg:hover,
 .btn-reg.btn-reg:focus {
-  border-color: #439e7b;
+  border-color: #aa261d;
   background-color: transparent;
-  color: #439e7b;
+  color: #aa261d;
 }
 .btn {
   font-size: 18px;
@@ -1632,7 +1657,7 @@ footer .contact-sty .download-app > i:hover {
 }
 .form-control:focus {
   padding: 6px 12px;
-  border: 1px solid #439e7b !important;
+  border: 1px solid #aa261d !important;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
@@ -1992,9 +2017,25 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .header.smaller {
-    height: 100px;
-    position: fixed;
+  .header-title {
+    height: auto;
+  }
+  .header-title .title {
+    padding: 20px 0;
+  }
+  .content {
+    margin-top: 100px;
+  }
+  .navbar-default {
+    margin-top: 90px;
+  }
+  .services .box-service h3 {
+    padding: 12px 20px 0;
+    text-align: center;
+  }
+  .services .box-service {
+    padding: 0;
+    text-align: center;
   }
   .container-tab {
     width: 100%;
@@ -2047,6 +2088,7 @@ footer .contact-sty .download-app > i:hover {
     border-left: 0 solid transparent;
     border-top: 1px solid #ccc;
     padding: 0;
+    border: none;
   }
   .fluid-res {
     padding: 0;
@@ -2065,8 +2107,8 @@ footer .contact-sty .download-app > i:hover {
     height: 40px;
   }
   .slider-img {
-    height: 600px;
-    background-size: cover;
+    height: 350px;
+    background-size: 100%;
     background-position: left;
   }
   header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
@@ -2157,16 +2199,38 @@ footer .contact-sty .download-app > i:hover {
   }
 }
 @media only screen and (max-width: 767px) {
-  .header.smaller {
-    height: 85px;
-    position: inherit;
+  .header-title {
+    height: 80px;
   }
-  .header.smaller .navbar-default .navbar-nav > li > a {
-    color: #746857;
-    padding: 33px 15px;
+  .header-title .title {
+    color: #fff;
+    font-size: 2em;
+    padding: 20px 4px 2px;
   }
-  .header.smaller .navbar-default .navbar-nav > li > a:hover {
-    color: rgba(255,255,255,0.8);
+  .services .box-service h3 {
+    text-align: center;
+  }
+  .register .reg-content .reg-descrip {
+    font-size: 18px;
+  }
+  .shopping-cart {
+    margin-top: 15px;
+  }
+  .navbar-info a,
+  .navbar-info a > i {
+    font-size: 16px;
+  }
+  .qty-cart {
+    right: 170px;
+  }
+  .navbar-info .col-sm-4 {
+    text-align: center;
+  }
+  .header .navbar-default {
+    height: auto;
+  }
+  .navbar-header {
+    padding: 0 0 25px;
   }
   #slider-area {
     background-color: #444;
@@ -2265,8 +2329,8 @@ footer .contact-sty .download-app > i:hover {
     width: 40%;
   }
   .slider-img {
-    height: 650px;
-    background-size: cover;
+    height: 150px;
+    background-size: 100%;
     background-position: left;
   }
   .box-gas {
@@ -2292,7 +2356,7 @@ footer .contact-sty .download-app > i:hover {
   .box-widget {
     padding: 0;
     border-left: none;
-    border-top: 1px solid #ddd;
+    border: none;
   }
   .carousel-caption {
     top: 0;
@@ -2390,6 +2454,7 @@ footer .contact-sty .download-app > i:hover {
   .widgets {
     margin-top: -35px;
     clear: both;
+    padding: 0;
   }
   .box-sidebar {
     padding-top: 20px;
@@ -2469,7 +2534,7 @@ footer .contact-sty .download-app > i:hover {
     height: auto;
   }
   .header .navbar-default {
-    position: fixed;
+    position: inherit;
   }
   .header .navbar-default .navbar-nav li > a {
     color: #746857;
