--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -8,7 +8,7 @@
                  infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
                 <div class="container">
                     <div class="row text-center">
-                        <div class="col-md-4" ng-repeat="entry in Product.list">
+                        <div class="col-sm-4" ng-repeat="entry in Product.list">
                             <div class="box-prod">
                                 <a ui-sref="product-detail({slug:entry.slug})">
                                 <div class="bg-prod"
