--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1756,9 +1756,9 @@ footer .contact-sty .download-app > i:hover {
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: #eb3349 /* fallback for old browsers */;
-  background: -webkit-linear-gradient(to left, #eb3349, #f45c43) /* Chrome 10-25, Safari 5.1-6 */;
-  background: linear-gradient(to left, #eb3349, #f45c43) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
+  background: rgba(255,255,255,0.8) /* fallback for old browsers */;
+  background: -webkit-linear-gradient(to left, rgba(255,255,255,0.8), rgba(255,255,255,0.8)) /* Chrome 10-25, Safari 5.1-6 */;
+  background: linear-gradient(to left, rgba(255,255,255,0.8), rgba(255,255,255,0.8)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
 }
 .block-ui-message {
   background: transparent;
