--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,10 +1,5 @@
-<div class="header-title-page">
-    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <div class="title">
-            <h2>Contáctanos</h2>
-            <small>Tú opinión es importante</small>
-        </div>
-    </div>
+<div class="header-title">
+    <h2 class="title text-center">{{ Post.detail.title }}</h2>
 </div>
 <section id="content-area">
     <div class="">
