--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1505,9 +1505,9 @@ footer
   width 100%
   height 100%
   opacity 1
-  background #EB3349 /* fallback for old browsers */
-  background -webkit-linear-gradient(to left, #EB3349 , #F45C43) /* Chrome 10-25, Safari 5.1-6 */
-  background linear-gradient(to left, #EB3349 , #F45C43) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background rgba(255, 255, 255, 0.8) /* fallback for old browsers */
+  background -webkit-linear-gradient(to left, rgba(255, 255, 255, 0.8) , rgba(255, 255, 255, 0.8)) /* Chrome 10-25, Safari 5.1-6 */
+  background linear-gradient(to left, rgba(255, 255, 255, 0.8) , rgba(255, 255, 255, 0.8)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
 .block-ui-message
