--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,9 +1,9 @@
 <div class="header-title">
-    <h2 class="title text-center">{{ Post.detail.title }}</h2>
+    <h2 class="title text-center">Contacto</h2>
 </div>
 <section id="content-area">
     <div class="">
-        <div class="form-section">
+        <div class="">
             <div class="container">
                 <div class="contact-section">
                     <div class="social-media">
