--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1391,7 +1391,7 @@ footer
     color #3a2103
 .contact-section
   background transparent
-  margin-top 100px
+  //margin-top 100px
 .form-item
   padding-top 20px
 .cart-qty
