--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -4,19 +4,20 @@
 <section id="content-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 content-pages" infinite-scroll='Product.getMoreProducts()'
+            <div class="col-md-12 content-pages" infinite-scroll='Product.getMorePosts()'
                  infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
                 <div class="container">
                     <div class="row text-center">
                         <div class="col-sm-4" ng-repeat="entry in Product.list">
                             <div class="box-prod">
-                                <a ui-sref="product-detail({slug:entry.slug})">
+                                <a ui-sref="category({slug:entry.slug})">
                                 <div class="bg-prod"
                                      style="background-image: url('{{entry.urlImages.original }}')"></div>
-                                <h3 class="prod-descrip">{{entry.title}}</h3>
+                                <h3 class="prod-descrip">{{entry.name}}</h3>
+
                                 <h4 class="prod-price"><strong>{{entry.excerpt}}</strong></h4>
                                 </a>
-                                <a ui-sref="shopcart" class="btn btn-success btn-cart">Agregar al carrito</a>
+                                <a ui-sref="category({slug:entry.slug})" class="btn btn-success btn-cart">Ver Productos</a>
                             </div>
                         </div>
                     </div>
