product detail with carousel-img

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -359,10 +359,10 @@ header
   background-image none
 .carousel-inner
   background-color transparent
-.carousel-control
+/*.carousel-control
   display none
 .carousel-indicators
-  display none
+  display none*/
 .carousel-caption
   top 20%
   padding 30px 60px
@@ -458,6 +458,11 @@ header
   padding 20px 0
   color orange
 /************** Home area css ******************/
+.detail-img
+  height 300px
+  background-size contain
+  background-repeat no-repeat
+  background-position center center
 .bg-prod
   height 215px
   background-position center center
@@ -568,6 +573,19 @@ header
       text-shadow 0 0 10px rgba(0,0,0,0.5)
 
 .product-detail
+  .carousel-indicators
+    padding-top 20px
+  .carousel-indicators li
+    border-color catext
+  .carousel-indicators
+    .active
+      background-color black !important
+  .detail-title
+    color catext
+    .detail-slide
+      margin-bottom 25px
+  .detail-price
+    text-align right
   .prod-detail-descrip
     p
       font-size 18px
