--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -66,6 +66,12 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .detail-qty
+    margin-left 42%
+  .detail-price
+    text-align center !important
+  .product-info
+    height 142px
   .header-title
     height auto
   .header-title .title
@@ -224,9 +230,16 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .detail-qty
+    margin-left 31%
+  .detail-price
+    text-align center !important
+  .product-info
+    height 235px
+  .content
+    margin-top 0
   .header-title
     height 80px
-
   .header-title .title 
     color #fff
     font-size 2em
