--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -1,7 +1,5 @@
-<div class="header-title-page">
-    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
-        <h2 class="title">{{ Post.categoryName }}</h2>
-    </div>
+<div class="header-title">
+    <h2 class="title text-center">{{Product.categoryName}}</h2>
 </div>
 <section id="content-area" class="content-blog">
     <div class="container">
@@ -12,7 +10,7 @@
                     <div class="row text-center">
                         <div class="col-sm-4" ng-repeat="entry in Product.list">
                             <div class="box-prod">
-                                <a ui-sref="category({slug:entry.slug})">
+                                <a ui-sref="product-detail({slug:entry.slug})">
                                     <div class="bg-prod"
                                          style="background-image: url('{{entry.urlImages.original }}')"></div>
                                     <h3 class="prod-descrip">{{entry.title}}</h3>
