--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -61,8 +61,8 @@
                                           placeholder="Escribe tu mensaje *" required
                                           ng-model="Contact.notification.message"></textarea>
 
-                                    <div style="text-align: right;padding-top:15px;">
-                                        <button type="submit" class="btn-red" ng-disabled="Contact.busy">
+                                    <div style="text-align: right;">
+                                        <button type="submit" class="btn btn-cart" ng-disabled="Contact.busy">
                                             Enviar <span ng-if="Contact.busy"><i
                                                 class="fa fa-spinner fa-spin"></i></span>
                                         </button>
