--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -7,7 +7,7 @@
             <div class="col-md-12 content-pages" infinite-scroll='Product.getMorePosts()'
                  infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
                 <div class="container">
-                    <div class="row text-center">
+                    <div class="row text-center" ng-if="ecommerce">
                         <div class="col-sm-4" ng-repeat="entry in Product.list">
                             <div class="box-prod">
                                 <a ui-sref="category({slug:entry.slug})">
@@ -20,6 +20,9 @@
                                 <a ui-sref="category({slug:entry.slug})" class="btn btn-success btn-cart">Ver Productos</a>
                             </div>
                         </div>
+                    </div>
+                    <div class="row text-center" ng-if="!ecommerce">
+                        <h2 class="text-center no-content">Proximamente</h2>
                     </div>
                     <div class="col-sm-12" ng-show="Product.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
