--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -5,19 +5,24 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <div class="content-pages" infinite-scroll='Product.getMorePosts()'
-                     infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
+                <div class="content-pages" infinite-scroll='Product.getMorePosts()' infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
                     <div class="row text-center">
                         <div class="col-sm-4" ng-repeat="entry in Product.list">
                             <div class="box-prod">
-                                <a ui-sref="product-detail({slug:entry.slug})">
-                                    <div class="bg-prod"
-                                         style="background-image: url('{{entry.urlImages.original }}')"></div>
+                                <a ui-sref="product-detail({slug:entry.slug})" ng-if="!Product.isPost">
+                                    <div class="bg-prod" style="background-image: url('{{entry.urlImages.original }}')"></div>
                                     <h3 class="prod-descrip">{{entry.title}}</h3>
 
-                                    <h4 class="prod-price"><strong>{{entry.price | currency}}</strong></h4>
+                                    <h4 class="prod-price" ng-if="!Product.isPost"><strong>{{entry.price | currency}}</strong></h4>
                                 </a>
-                                <a ui-sref="category({slug:entry.slug})" class="btn btn-success btn-cart">Agregar al Carrito</a>
+                                <a ui-sref="post_detail({slug:entry.slug})" ng-if="Product.isPost">
+                                    <div class="bg-prod" style="background-image: url('{{entry.urlImages.original }}')"></div>
+                                    <h3 class="prod-descrip">{{entry.title}}</h3>
+
+                                    <h4 class="prod-price" ng-if="!Product.isPost"><strong>{{entry.price | currency}}</strong></h4>
+                                </a>
+                                <a ui-sref="category({slug:entry.slug})" class="btn btn-success btn-cart" ng-if="!Product.isPost">Agregar al Carrito</a>
+                                <a ui-sref="post_detail({slug: entry.slug})" class="btn btn-success btn-cart" ng-if="Product.isPost">Ver más</a>
                             </div>
                         </div>
                         <!--<div class="box-white col-sm-12 box-blog" ng-repeat="entry in Product.list">
@@ -39,8 +44,7 @@
                             <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
                         </div>
                         <div class="col-sm-12" ng-show="!Product.busy">
-                            <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
-                                contenido disponible</h2>
+                            <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con contenido disponible</h2>
                         </div>
                     </div>
                     <!--post list -->
