--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -12,13 +12,13 @@
 
                 <div ng-bind-html="Page.detail.content | trustHtml"></div>
                 <!--gallery here-->
-                <div deckgrid class="deckgrid gallery" source="Page.detail.galleryImages">
+                <div deckgrid class="deckgrid gallery" source="Post.detail.galleryImages">
                     <div class="a-card portfolio_content box-portfolio" data-wow-duration="2s">
                         <a post-link="{ link: {url: card.link, target: '_blank'} }"
-                           href="{{ card.urlImages.original }}"
+                           href="{{ card.url }}"
                            data-lightbox="gallery-images">
-                            <img class="thumbnail img-responsive" post-image="{{ card.urlImages.large }}"
-                                 alt="{{ card.title }}">
+                            <img class="thumbnail img-responsive" post-image="{{ card.url }}"
+                                 alt="{{ card.name }}">
                         </a>
                     </div>
                 </div>
