--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -26,10 +26,10 @@
                     <div deckgrid class="deckgrid gallery" source="Post.detail.galleryImages">
                         <div class="a-card portfolio_content box-portfolio" data-wow-duration="2s">
                             <a post-link="{ link: {url: card.link, target: '_blank'} }"
-                               href="{{ card.urlImages.original }}"
+                               href="{{ card.url }}"
                                data-lightbox="gallery-images">
-                                <img class="thumbnail img-responsive" post-image="{{ card.urlImages.large }}"
-                                     alt="{{ card.title }}">
+                                <img class="thumbnail img-responsive" post-image="{{ card.url }}"
+                                     alt="{{ card.name }}">
                             </a>
                         </div>
                     </div>
