--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
         <uib-carousel interval="5000" template-url="/templates/partials/carousel.html">
             <uib-slide ng-repeat="slide in Home.mainSlider">
                 <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                    <div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>
+                    <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
                 </a>
             </uib-slide>
         </uib-carousel>
@@ -42,7 +42,7 @@
             <div class="row text-center">
                 <div class="col-sm-4" ng-repeat="product in Home.products">
                     <div class="box-prod">
-                        <div class="bg-prod" style="background-image: url('{{product.urlImages.original }}')"></div>
+                        <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
                         <h3 class="prod-descrip">{{product.title}}</h3>
                         <h4 class="prod-price" ng-if="ecommerce"><strong>{{product.excerpt}}</strong></h4>
                         <h4 class="prod-price" ng-if="!ecommerce"><strong>Proximamente</strong></h4>
