--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -21,13 +21,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row text-center" ng-if="!ecommerce">
+                    <div class="row text-center">
                         <h2 class="text-center no-content">Proximamente</h2>
                     </div>
-                    <div class="col-sm-12" ng-show="Product.busy">
+                    <div class="col-sm-12" ng-show="Product.busy" ng-if="1>5">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                     </div>
-                    <div class="col-sm-12" ng-show="!Product.busy">
+                    <div class="col-sm-12" ng-show="!Product.busy" ng-if="1>5">
                         <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
                             contenido disponible</h2>
                     </div>
